// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Notification /> > hides the previous message when there is no current notification 1`] = `<DocumentFragment />`;

exports[`<Notification /> > shows a success notification and clears it when clicked 1`] = `
<DocumentFragment>
  <div
    class="scale notification-wrapper visible transition"
  >
    <div
      class="ui green large floating message notification success"
    >
      This is a test message, please ignore.
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Notification /> > shows an error notification and clears it when clicked 1`] = `
<DocumentFragment>
  <div
    class="fly down notification-wrapper visible transition"
  >
    <div
      class="ui red large floating message notification error"
    >
      This is a test message, please ignore.
    </div>
  </div>
</DocumentFragment>
`;
